@@ -19,6 +19,8 @@ import com.google.gson.JsonObject;
 import java.io.IOException;
 import java.math.BigDecimal;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.List;
 import java.util.Optional;
@@ -32,7 +34,6 @@ import net.rptools.maptool.language.I18N;
 import net.rptools.maptool.model.library.Library;
 import net.rptools.maptool.model.library.LibraryManager;
 import net.rptools.maptool.util.FunctionUtil;
-import net.rptools.maptool.util.HTMLUtil;
 import net.rptools.parser.Parser;
 import net.rptools.parser.ParserException;
 import net.rptools.parser.VariableResolver;
@@ -172,8 +173,8 @@ public class MacroDialogFunctions extends AbstractFunction {
       String opts = parameters.size() > 2 ? parameters.get(2).toString() : "";
       URL url = null;
       try {
-        url = new URL(parameters.get(1).toString());
-      } catch (MalformedURLException e) {
+        url = new URI(parameters.get(1).toString()).toURL();
+      } catch (MalformedURLException | URISyntaxException e) {
         throw new ParserException(e);
       }
 
@@ -192,7 +193,6 @@ public class MacroDialogFunctions extends AbstractFunction {
 
   private String showURL(String name, URL url, String opts, FrameType frameType, boolean isHTML5)
       throws ParserException {
-    String htmlString = "";
     try {
       Optional<Library> library = new LibraryManager().getLibrary(url).get();
       if (library.isEmpty()) {
@@ -200,11 +200,16 @@ public class MacroDialogFunctions extends AbstractFunction {
             I18N.getText("macro.function.html5.invalidURI", url.toExternalForm()));
       }
 
-      htmlString = HTMLUtil.fixHTMLBase(library.get().readAsString(url).get(), url);
+      if (!library.get().locationExists(url).get()) {
+        throw new ParserException(
+            I18N.getText("macro.function.html5.invalidURI", url.toExternalForm()));
+      }
     } catch (InterruptedException | ExecutionException | IOException e) {
-      throw new ParserException(e);
+      throw new ParserException(
+          I18N.getText("macro.function.html5.invalidURI", url.toExternalForm()));
     }
-    HTMLFrameFactory.show(name, frameType, true, opts, htmlString);
+    HTMLContent htmlContent = HTMLContent.fromURL(url);
+    HTMLFrameFactory.show(name, frameType, true, opts, htmlContent);
     return "";
   }
 
@@ -309,8 +314,23 @@ public class MacroDialogFunctions extends AbstractFunction {
       throw new ParserException(I18N.getText("msg.error.dialog.js.id", fName, thisArg));
     }
 
-    // Create the script
-    String script = func + ".apply(" + thisArg + "," + argsArray.toString() + ");";
+    // Wrap the script in a function to check if the document is complenet/wait for the document to
+    // be complete before trying to run it
+    String script =
+        """
+        (function() {
+          function waitForComplete() {
+            if (document.readyState === "complete") {
+              %s.apply(%s, %s);
+            } else {
+              setTimeout(waitForComplete, 50);
+            }
+          };
+
+          waitForComplete();
+        })();
+        """
+            .formatted(func, thisArg, argsArray.toString());
 
     // Execute the script
     boolean executed;
